allow cors headers + refactoring related headers, usefetch, cors